--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   google_fonts: ^6.1.0
   sizer: ^2.0.15
+  flutter_bloc: ^8.1.3
 
 
   # The following adds the Cupertino Icons font to your application.
